[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = "1"

